# cbva

./: .gitignore
backend/: .gitignore  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
backend/api/: index.py  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py  serialization.py
backend/app/dependencies/: auth.py  pagination.py
backend/app/routers/: actions.py  admin.py  assessments.py  audit.py  auth.py  baselines.py  bluesky.py  client_meetings.py  collection_transactions.py  collections.py  consolidated.py  el_summary.py  engagement_actions.py  engagements.py  financial_years.py  firmwide.py  headcount.py  hiring.py  leaders.py  pipeline.py  tasks.py  team.py
backend/app/schemas/: action.py  assessment.py  audit.py  auth.py  baseline.py  bluesky.py  collection.py  collection_transaction.py  el_summary.py  engagement.py  engagement_action.py  engagement_change.py  extended.py  financial_year.py  headcount.py  hiring.py  leader.py  pipeline.py  provenance.py  settings.py  task.py  team.py  user.py
backend/app/services/: audit_service.py  consolidated_import.py  consolidated_service.py  engagement_change_service.py  engagement_derivation.py  engagement_service.py  firmwide_service.py  fiscal_year.py  fy_calendar.py  month_matching.py
backend/scripts/: baseline_snapshot.py  seed_varun_2627.py
backend/tests/: conftest.py  test_audit_log.py  test_auth.py  test_bluesky_ledger.py  test_engagements.py  test_firmwide.py  test_leader_scope.py
frontend/: FULLSTACK_ROADMAP.md  (+5 more)
(+141 files in other folders)
